set overflow, width and height to allow proper scrolling of handsontable refs #121 iron resize behavior not needed. overflow:hidden workaround for getTrimmingContainer also no longer needed upgrade to 0.20.2-ibm fork of handsontable
(c) Copyright IBM Corp. 2015

--- a/elements/urth-viz-table/urth-viz-table.css
+++ b/elements/urth-viz-table/urth-viz-table.css
@@ -1,5 +1,7 @@
-urth-viz-table {
-    overflow: hidden; /* hack around broken ht sizing logic in getTrimmingContainer */
+#tableContainer {
+    overflow: scroll;
+    border-spacing: 0;
+    display: block;
 }
 
 .handsontable td {
